[gd_scene load_steps=6 format=3 uid="uid://st23kqmh53js"]

[ext_resource type="Script" path="res://script/le_chip.gd" id="1_0qqam"]
[ext_resource type="Texture2D" uid="uid://58l33vmgdr6h" path="res://ship/body_01.png" id="2_m8i48"]
[ext_resource type="Texture2D" uid="uid://18niovqxrds" path="res://ship/exhaust_01a.png" id="3_s6tyr"]
[ext_resource type="Texture2D" uid="uid://idle0uq3xoyt" path="res://ship/exhaust_01b.png" id="4_duskf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yaq45"]
radius = 11.0
height = 56.0

[node name="LeChip" type="CharacterBody2D"]
script = ExtResource("1_0qqam")

[node name="ship_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_m8i48")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_yaq45")

[node name="thrust1" type="Sprite2D" parent="."]
position = Vector2(0, 33)
texture = ExtResource("3_s6tyr")

[node name="thrust2" type="Sprite2D" parent="."]
position = Vector2(0, 33)
texture = ExtResource("4_duskf")

[node name="reverse1" type="Sprite2D" parent="."]
position = Vector2(-4, -33)
rotation = 3.14159
scale = Vector2(0.361006, 0.371422)
texture = ExtResource("4_duskf")

[node name="reverse2" type="Sprite2D" parent="."]
position = Vector2(4, -33)
rotation = 3.14159
scale = Vector2(0.361006, 0.371422)
texture = ExtResource("4_duskf")
